[package]
name = "http-echo"
version = "0.1.0"
authors = ["dkos <kosdejan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

simplelog = "0.7.6"
log = "0.4.8"

lru_time_cache = "0.10.0"
